--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,7 @@
                 <nav class="header__nav">
                     <ul class="header__list">
                         <li>
-                            <a class="header__link" href="#">Главная</a>
+                            <a class="header__link" href="#">Home</a>
                         </li>
                         <li>
                             <a class="header__link" href="#">О нас</a>
