исправлены пути в файлах

--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="../css/style.css">
 
 <head>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>PRO_GARAGE</title>
-    <link rel="icon" href="images/logo/logo.png">
+    <link rel="icon" href="../images/logo/logo.png">
    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -20,8 +20,8 @@
     <header class="header">
         <div class="container">
             <div class="header__inner">
-                <a href="html/index.html">
-                    <img class="site__logo" src="images/logo/logo.png" alt="logo" />
+                <a href="..html/index.html">
+                    <img class="site__logo" src="../images/logo/logo.png" alt="logo" />
                 </a>
                 <nav class="header__nav">
                     <ul class="header__list">
@@ -38,7 +38,7 @@
                             <a class="header__link" href="#">Портфолио</a>
                         </li>
                         <li>
-                            <img class="header__link" src="images/logo/user.png" href="#">
+                            <img class="header__link" src="../images/logo/user.png" href="#">
                         </li>
                     </ul>
                 </nav>
@@ -54,9 +54,9 @@
             <p class="name">PRO_GARAGE</p>
         </div>
         <div class="icons">
-            <img src="images/logo/telegram.svg">
-            <img src="images/logo/VK.svg">
-            <img src="images/logo/whatsapp.svg">
+            <img src="../images/logo/telegram.svg">
+            <img src="../images/logo/VK.svg">
+            <img src="../images/logo/whatsapp.svg">
         </div>
     </section>
 
@@ -66,7 +66,7 @@
                 <div class="about__name">
                     <h1 class="about__title">О нас</h1>
                     <video class="logo__3d" controls autoplay loop>
-                        <source src="video/3d-logo.mp4">
+                        <source src="../video/3d-logo.mp4">
                     </video>
                 </div>
                 <p class="about__text">Мы предлагаем полный спектр профессиональных
@@ -77,8 +77,8 @@
                     спецтехнику, легковые, грузовые и импортные автомобили.
                 </p>
             </div>
-            <video width="900px" height="460px" class="video__about" controls poster="/images/preview.png">
-                <source src="video/video.mp4" >
+            <video width="900px" height="460px" class="video__about" controls poster="../images/preview.png">
+                <source src="../video/video.mp4" >
             </video>
         </div>
     </section>
@@ -88,27 +88,27 @@
             <h1 class="services__title">Услуги</h1>
             <div class="services__swiper">
                 <div class="swiper__slide">
-                    <img class="swiper__foto" src="images/slide/fon__slide.png">
+                    <img class="swiper__foto" src="../images/slide/fon__slide.png">
                     <p class="swiper__text">Автостекла: установка и ремонт</p>
                 </div>
                 <div class="swiper__slide">
-                    <img class="swiper__foto" src="images/slide/fon__slide2.png">
+                    <img class="swiper__foto" src="../images/slide/fon__slide2.png">
                     <p class="swiper__text">Тонировка</p>
                 </div>
                 <div class="swiper__slide">
-                    <img class="swiper__foto" src="images/slide/fon__slide3.png">
+                    <img class="swiper__foto" src="../images/slide/fon__slide3.png">
                     <p class="swiper__text">Детейлинг химчистка</p>
                 </div>
                 <div class="swiper__slide">
-                    <img class="swiper__foto" src="images/slide/fon__slide4.png">
+                    <img class="swiper__foto" src="../images/slide/fon__slide4.png">
                     <p class="swiper__text">Полировка и бронирование лкп</p>
                 </div>
                 <div class="swiper__slide">
-                    <img class="swiper__foto" src="images/slide/fon__slide5.png">
+                    <img class="swiper__foto" src="../images/slide/fon__slide5.png">
                     <p class="swiper__text">Нанесение защитных покрытий</p>
                 </div>
                 <div class="swiper__slide">
-                    <img class="swiper__foto" src="images/slide/fon__slide6.png">
+                    <img class="swiper__foto" src="../images/slide/fon__slide6.png">
                     <p class="swiper__text">Шумоизоляция</p>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                     <li class="info">
                         <h2 class="services__subtitle">Автостекла: установка и ремонт</h2>
                         <div class="services__info">
-                            <img src="images/slide/fon__slide.png" class="services__foto">
+                            <img src="../images/slide/fon__slide.png" class="services__foto">
                             <div class="services__content">
                                 <p class="services__num">01</p>
                                 <p class="services__text">
@@ -138,7 +138,7 @@
                     <li class="info">
                         <h2 class="services__subtitle">Тонировка</h2>
                         <div class="services__info">
-                            <img src="images/slide/fon__slide2.png" class="services__foto">
+                            <img src="../images/slide/fon__slide2.png" class="services__foto">
                             <div class="services__content">
                                 <p class="services__num">01</p>
                                 <p class="services__text">
@@ -156,7 +156,7 @@
                     <li class="info">
                         <h2 class="services__subtitle">Детейлинг химчистка</h2>
                         <div class="services__info">
-                            <img src="images/slide/fon__slide3.png" class="services__foto">
+                            <img src="../images/slide/fon__slide3.png" class="services__foto">
                             <div class="services__content">
                                 <p class="services__num">01</p>
                                 <p class="services__text">
@@ -175,7 +175,7 @@
                     <li class="info">
                         <h2 class="services__subtitle">Полировка и бронирование ЛКП</h2>
                         <div class="services__info">
-                            <img src="images/slide/fon__slide4.png" class="services__foto">
+                            <img src="../images/slide/fon__slide4.png" class="services__foto">
                             <div class="services__content">
                                 <p class="services__num">01</p>
                                 <p class="services__text">
@@ -195,7 +195,7 @@
                     <li class="info">
                         <h2 class="services__subtitle">Нанесение защитных покрытий</h2>
                         <div class="services__info">
-                            <img src="images/slide/fon__slide5.png" class="services__foto">
+                            <img src="../images/slide/fon__slide5.png" class="services__foto">
                             <div class="services__content">
                                 <p class="services__num">01</p>
                                 <p class="services__text">
@@ -214,7 +214,7 @@
                     <li class="info">
                         <h2 class="services__subtitle">Шумоизоляция</h2>
                         <div class="services__info">
-                            <img src="images/slide/fon__slide6.png" class="services__foto">
+                            <img src="../images/slide/fon__slide6.png" class="services__foto">
                             <div class="services__content">
                                 <p class="services__num">01</p>
                                 <p class="services__text">
@@ -240,16 +240,16 @@
     <section class="portfolio__container">
         <h1 class="portfolio__title">Портфолио</h1>
         <div class="portfolio__foto">
-            <img src="images/portfolio/portfolio1.png" class="work__foto">
-            <img src="images/portfolio/portfolio2.png" class="work__foto">
-            <img src="images/portfolio/portfolio3.png" class="work__foto">
-            <img src="images/portfolio/portfolio4.png" class="work__foto">
-            <img src="images/portfolio/portfolio5.png" class="work__foto">
-            <img src="images/portfolio/portfolio6.png" class="work__foto">
-            <img src="images/portfolio/portfolio7.png" class="work__foto">
-            <img src="images/portfolio/portfolio8.png" class="work__foto">
-            <img src="images/portfolio/portfolio9.png" class="work__foto">
-            <img src="images/portfolio/portfolio10.png" class="work__foto">
+            <img src="../images/portfolio/portfolio1.png" class="work__foto">
+            <img src="../images/portfolio/portfolio2.png" class="work__foto">
+            <img src="../images/portfolio/portfolio3.png" class="work__foto">
+            <img src="../images/portfolio/portfolio4.png" class="work__foto">
+            <img src="../images/portfolio/portfolio5.png" class="work__foto">
+            <img src="../images/portfolio/portfolio6.png" class="work__foto">
+            <img src="../images/portfolio/portfolio7.png" class="work__foto">
+            <img src="../images/portfolio/portfolio8.png" class="work__foto">
+            <img src="../images/portfolio/portfolio9.png" class="work__foto">
+            <img src="../images/portfolio/portfolio10.png" class="work__foto">
         </div>
     </section>
 
