исправлено поле записи для почты

--- a/html/index.html
+++ b/html/index.html
@@ -282,8 +282,10 @@
                 type="email"
                 class="appointment__input"
                 id="email"
+                name="email"
                 placeholder="Почта"
-                required>
+                required
+                autocomplete="email">
                 <button type="submit" class="appointment__button">ОТПРАВИТЬ ЗАЯВКУ</button>
             </form>
         </div>
