сделан адаптив для шапки сайта и добавлено бургер-меню

--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,13 @@
                 <a href="..html/index.html">
                     <img class="site__logo" src="../images/logo/logo.png" alt="logo" />
                 </a>
+                <button class="burger" aria-label="Toggle navigation">
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
+                    <span class="burger__line"></span>
+                </button>
                 <nav class="header__nav">
+                    <button class="close-menu" aria-label="Close menu">✖</button>
                     <ul class="header__list">
                         <li>
                             <button class="header__link" data-target="home__section">Главная</button>
@@ -336,5 +342,6 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="../js/index.js"></script>
     <script src="../js/appointment.js"></script>
+    <script src="../js/mobile-menu.js"></script>
 </body>
 </html>
