сделан адаптив для главной секции

--- a/html/index.html
+++ b/html/index.html
@@ -60,9 +60,9 @@
             <p class="name">PRO_GARAGE</p>
         </div>
         <div class="icons">
-            <img src="../images/logo/telegram.svg">
-            <img src="../images/logo/VK.svg">
-            <img src="../images/logo/whatsapp.svg">
+            <img src="../images/logo/telegram.svg" class="icons__foto">
+            <img src="../images/logo/VK.svg" class="icons__foto">
+            <img src="../images/logo/whatsapp.svg" class="icons__foto">
         </div>
     </section>
 
