--- a/html/index.html
+++ b/html/index.html
@@ -71,7 +71,7 @@
             <div class="about__info">
                 <div class="about__name">
                     <h1 class="about__title">О нас</h1>
-                    <video class="logo__3d" controls autoplay loop>
+                    <video class="logo__3d" autoplay muted loop playsinline>
                         <source src="../video/3d-logo.mp4">
                     </video>
                 </div>
