добавлен адаптив для секции запись

--- a/html/index.html
+++ b/html/index.html
@@ -296,8 +296,8 @@
             </form>
         </div>
 
-            <div class="baner" controls autoplay loop>
-                <img src="../video/baner.gif">
+            <div controls autoplay loop>
+                <img src="../video/baner.gif" class="baner">
             </div>
         </div>
     </section>
