добавлен адаптив для подвала

--- a/html/index.html
+++ b/html/index.html
@@ -308,32 +308,38 @@
         <div class="footer__info">
             <div class="footer__left">
                 <h1 class="footer__title">РЕЖИМ РАБОТЫ</h1>
-                <p class="date__time">Пн - Сб: 09:00 – 19:00</p>
-                <p class="date__time">Вс: Выходной</p>
+                <div class="footer__left-info">
+                    <p class="date__time">Пн - Сб: 09:00 – 19:00</p>
+                    <p class="date__time">Вс: Выходной</p>
+                </div>
             </div>
             
             <div class="footer__center">
                 <h1 class="footer__title">НАШЕ МЕСТОПОЛОЖЕНИЕ</h1>
-                <div class="adres__container">
-                    <img src="../images/logo/adres.svg" class="adres__logo">
-                    <p class="adres">ул. Коммуны, 3А, Белореченск</p>
-                </div>
-                <div class="email__container">
-                    <img src="../images/logo/email.svg" class="email__logo">
-                    <p class="email">PRO_GARAGE@gmail.com</p>
-                </div>
-                <div class="number__container">
-                    <img src="../images/logo/number.svg" class="number__logo">
-                    <P class="number">+7 (989) 198-38-38</P>
-                </div>
+                <div class="footer__center-info">
+                    <div class="adres__container">
+                        <img src="../images/logo/adres.svg" class="adres__logo">
+                        <p class="adres">ул. Коммуны, 3А, Белореченск</p>
+                    </div>
+                    <div class="email__container">
+                        <img src="../images/logo/email.svg" class="email__logo">
+                        <p class="email">PRO_GARAGE@gmail.com</p>
+                    </div>
+                    <div class="number__container">
+                        <img src="../images/logo/number.svg" class="number__logo">
+                        <p class="number">+7 (989) 198-38-38</>
+                        </div>
+                    </div>
             </div>
             
             <div class="footer__right">
                 <h1 class="footer__title">СЛЕДИТЕ ЗА НАМИ</h1>
-                <div class="right__logo">
-                    <a class="telegram" href="#"><img src="../images/logo/telegram.svg" class="telegram"></a>
-                    <a class="VK" href="#"><img src="../images/logo/VK.svg" class="VK"></a>
-                    <a class="whatsapp" href="#"><img src="../images/logo/whatsapp.svg" class="whatsapp"></a>
+                <div class="footer__right-info">
+                    <div class="right__logo">
+                        <a class="telegram" href="#"><img src="../images/logo/telegram.svg" class="telegram"></a>
+                        <a class="VK" href="#"><img src="../images/logo/VK.svg" class="VK"></a>
+                        <a class="whatsapp" href="#"><img src="../images/logo/whatsapp.svg" class="whatsapp"></a>
+                    </div>
                 </div>
             </div>
         </div>  
