сделана кнопка возвращения на верх

--- a/html/index.html
+++ b/html/index.html
@@ -349,5 +349,8 @@
     <script src="../js/index.js"></script>
     <script src="../js/appointment.js"></script>
     <script src="../js/mobile-menu.js"></script>
+    <script src="../js/_backToTop.js"></script>
+
+    <button id="backToTop" class="back__to__top" title="Наверх">↑</button>
 </body>
 </html>
