исправлен адаптив для слайдера

--- a/html/index.html
+++ b/html/index.html
@@ -327,7 +327,7 @@
                     </div>
                     <div class="number__container">
                         <img src="../images/logo/number.svg" class="number__logo">
-                        <p class="number">+7 (989) 198-38-38</>
+                        <p class="number">+7 (989) 198-38-38</p>
                         </div>
                     </div>
             </div>
