--- a/html/index.html
+++ b/html/index.html
@@ -90,45 +90,41 @@
     </section>
 
     <section class="services__container" id="services__section">
-
             <h2 class="services__title">Услуги</h2>
             <div class="services__swiper swiper-container">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img class="swiper__foto" src="../images/slide/fon__slide.png" alt="">
+                        <img class="swiper__foto" src="../images/slide/fon__slide.webp" alt="">
                         <p class="swiper__text">Автостекла: установка и ремонт</p>
                     </div>
                     <div class="swiper-slide">
-                        <img class="swiper__foto" src="../images/slide/fon__slide2.png" alt="">
+                        <img class="swiper__foto" src="../images/slide/fon__slide2.webp" alt="">
                         <p class="swiper__text">Тонировка</p>
                     </div>
                     <div class="swiper-slide">
-                        <img class="swiper__foto" src="../images/slide/fon__slide3.png" alt="">
+                        <img class="swiper__foto" src="../images/slide/fon__slide3.webp" alt="">
                         <p class="swiper__text">Детейлинг химчистка</p>
                     </div>
                     <div class="swiper-slide">
-                        <img class="swiper__foto" src="../images/slide/fon__slide4.png" alt="">
+                        <img class="swiper__foto" src="../images/slide/fon__slide4.webp" alt="">
                         <p class="swiper__text">Полировка и бронирование лкп</p>
                     </div>
                     <div class="swiper-slide">
-                        <img class="swiper__foto" src="../images/slide/fon__slide5.png" alt="">
+                        <img class="swiper__foto" src="../images/slide/fon__slide5.webp" alt="">
                         <p class="swiper__text">Нанесение защитных покрытий</p>
                     </div>
                     <div class="swiper-slide">
-                        <img class="swiper__foto" src="../images/slide/fon__slide6.png" alt="">
+                        <img class="swiper__foto" src="../images/slide/fon__slide6.webp" alt="">
                         <p class="swiper__text">Шумоизоляция</p>
                     </div>
                 </div>
-            </div>
-
-
 
             <div class="services__card">
                 <ul class="services__list">
                     <li class="info">
                         <h2 class="services__subtitle">Автостекла: установка и ремонт</h2>
                         <div class="services__info">
-                            <img src="../images/slide/fon__slide.png" class="services__foto">
+                            <img src="../images/slide/fon__slide.webp" class="services__foto">
                             <div class="services__content">
                                 <p class="services__num">01</p>
                                 <p class="services__text">
@@ -148,7 +144,7 @@
                     <li class="info">
                         <h2 class="services__subtitle">Тонировка</h2>
                         <div class="services__info">
-                            <img src="../images/slide/fon__slide2.png" class="services__foto">
+                            <img src="../images/slide/fon__slide2.webp" class="services__foto">
                             <div class="services__content">
                                 <p class="services__num">01</p>
                                 <p class="services__text">
@@ -166,7 +162,7 @@
                     <li class="info">
                         <h2 class="services__subtitle">Детейлинг химчистка</h2>
                         <div class="services__info">
-                            <img src="../images/slide/fon__slide3.png" class="services__foto">
+                            <img src="../images/slide/fon__slide3.webp" class="services__foto">
                             <div class="services__content">
                                 <p class="services__num">01</p>
                                 <p class="services__text">
@@ -185,7 +181,7 @@
                     <li class="info">
                         <h2 class="services__subtitle">Полировка и бронирование ЛКП</h2>
                         <div class="services__info">
-                            <img src="../images/slide/fon__slide4.png" class="services__foto">
+                            <img src="../images/slide/fon__slide4.webp" class="services__foto">
                             <div class="services__content">
                                 <p class="services__num">01</p>
                                 <p class="services__text">
@@ -205,7 +201,7 @@
                     <li class="info">
                         <h2 class="services__subtitle">Нанесение защитных покрытий</h2>
                         <div class="services__info">
-                            <img src="../images/slide/fon__slide5.png" class="services__foto">
+                            <img src="../images/slide/fon__slide5.webp" class="services__foto">
                             <div class="services__content">
                                 <p class="services__num">01</p>
                                 <p class="services__text">
@@ -224,7 +220,7 @@
                     <li class="info">
                         <h2 class="services__subtitle">Шумоизоляция</h2>
                         <div class="services__info">
-                            <img src="../images/slide/fon__slide6.png" class="services__foto">
+                            <img src="../images/slide/fon__slide6.webp" class="services__foto">
                             <div class="services__content">
                                 <p class="services__num">01</p>
                                 <p class="services__text">
@@ -250,16 +246,16 @@
     <section class="portfolio__container" id="portfolio__section">
         <h1 class="portfolio__title">Портфолио</h1>
         <div class="portfolio__foto">
-            <img src="../images/portfolio/portfolio1.png" class="work__foto">
-            <img src="../images/portfolio/portfolio2.png" class="work__foto">
-            <img src="../images/portfolio/portfolio3.png" class="work__foto">
-            <img src="../images/portfolio/portfolio4.png" class="work__foto">
-            <img src="../images/portfolio/portfolio5.png" class="work__foto">
-            <img src="../images/portfolio/portfolio6.png" class="work__foto">
-            <img src="../images/portfolio/portfolio7.png" class="work__foto">
-            <img src="../images/portfolio/portfolio8.png" class="work__foto">
-            <img src="../images/portfolio/portfolio9.png" class="work__foto">
-            <img src="../images/portfolio/portfolio10.png" class="work__foto">
+            <img src="../images/portfolio/portfolio1.webp" class="work__foto">
+            <img src="../images/portfolio/portfolio2.webp" class="work__foto">
+            <img src="../images/portfolio/portfolio3.webp" class="work__foto">
+            <img src="../images/portfolio/portfolio4.webp" class="work__foto">
+            <img src="../images/portfolio/portfolio5.webp" class="work__foto">
+            <img src="../images/portfolio/portfolio6.webp" class="work__foto">
+            <img src="../images/portfolio/portfolio7.webp" class="work__foto">
+            <img src="../images/portfolio/portfolio8.webp" class="work__foto">
+            <img src="../images/portfolio/portfolio9.webp" class="work__foto">
+            <img src="../images/portfolio/portfolio10.webp" class="work__foto">
         </div>
     </section>
     
